--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,22 @@
 [package]
+edition = "2021"
 name = "dice"
 version = "0.1.0"
-edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 from-pest = "0.3.2"
-itertools = "0.11.0"
-lowcharts = "0.5.8"
+itertools = "0.12.1"
+lowcharts = {version = "0.5.8", optional = true}
 num = "0.4.1"
-pest = { version = "2.7.5", features = ["pretty-print"] }
+pest = {version = "2.7.8", features = ["pretty-print"]}
 pest-ast = "0.3.4"
-pest_derive = "2.7.5"
+pest_derive = "2.7.8"
+
+[features]
+lowcharts = ["dep:lowcharts"]
+
+[[bin]]
+name = "dice"
+required-features = ["lowcharts"]
